Dockerfile fix